CocaColaProjectBidev_2/src/objects/Milestone_ToDo_Tag__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>ToDo</relationshipLabel>
        <relationshipName>ToDo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Name</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipName>Milestone_ToDo_Tag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToDo__c</fullName>
        <label>ToDo Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ToDo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>Todo-{0000000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>